# SQL-Agent-for-High-Cardinality-Databases

./: .env.example  .gitignore  README.md  agent.py  check_collections.py  main.py  pyproject.toml  query_generator.py  run_multi_agent.py  setup.py  table_selector.py  test_agent.py  value_disambiguator.py
agent/: README.md  __init__.py  multi_agent_sql.py  simple_multi_agent.py  state.py  test_multi_agent.py
agent/agents/: __init__.py  disambiguator.py  planner.py  sql_debugger.py  sql_generator.py  supervisor.py  table_selector.py
agent/docs/: IMPLEMENTATION_SUMMARY.md  LANGGRAPH_ARCHITECTURE.md  TOOLNODE_REFACTOR.md
agent/tools/: __init__.py  database_tools.py  disambiguator_tools.py  sql_tools.py
